[gd_scene load_steps=7 format=3 uid="uid://bnkfa4uraq6k5"]

[ext_resource type="Script" path="res://Levels/main_level.gd" id="1_3800w"]
[ext_resource type="Texture2D" uid="uid://cnyp3j8utf76g" path="res://icon.svg" id="1_a31oy"]
[ext_resource type="PackedScene" uid="uid://day7v111rnsk0" path="res://Player/player.tscn" id="1_u7qmr"]
[ext_resource type="PackedScene" uid="uid://xbs27udpp45r" path="res://Enemies/enemy.tscn" id="3_bn8ic"]
[ext_resource type="Script" path="res://Levels/EnemySpawner.gd" id="3_dwgns"]
[ext_resource type="PackedScene" uid="uid://de6uuxjirghi7" path="res://Menus/game_screens.tscn" id="6_pljid"]

[node name="MainLevel" type="Node2D"]
script = ExtResource("1_3800w")

[node name="Player" parent="." instance=ExtResource("1_u7qmr")]
position = Vector2(226, 128)
base_speed = 200.0

[node name="LevelContents" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="LevelContents"]
modulate = Color(0.027451, 1, 0.231373, 0.729412)
scale = Vector2(7.55738, 7.97727)
texture = ExtResource("1_a31oy")

[node name="Background2" type="Sprite2D" parent="LevelContents"]
modulate = Color(0.027451, 1, 0.231373, 0.729412)
position = Vector2(970, 0)
scale = Vector2(7.55738, 7.97727)
texture = ExtResource("1_a31oy")

[node name="Background3" type="Sprite2D" parent="LevelContents"]
modulate = Color(0.027451, 1, 0.231373, 0.729412)
position = Vector2(-4.32767, 1009.55)
scale = Vector2(7.55738, 7.97727)
texture = ExtResource("1_a31oy")

[node name="Background4" type="Sprite2D" parent="LevelContents"]
modulate = Color(0.027451, 1, 0.231373, 0.729412)
position = Vector2(965.672, 1009.55)
scale = Vector2(7.55738, 7.97727)
texture = ExtResource("1_a31oy")

[node name="EnemyContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="EnemySpawner" type="Node2D" parent="EnemyContainer"]
script = ExtResource("3_dwgns")
enemy_scene = ExtResource("3_bn8ic")

[node name="SpawnCooldown" type="Timer" parent="EnemyContainer/EnemySpawner"]
wait_time = 5.0
autostart = true

[node name="EnemySpawnPoints" type="Node2D" parent="EnemyContainer"]

[node name="Marker2D" type="Marker2D" parent="EnemyContainer/EnemySpawnPoints"]
position = Vector2(-561, -14)

[node name="Marker2D2" type="Marker2D" parent="EnemyContainer/EnemySpawnPoints"]
position = Vector2(-561, 894)

[node name="Marker2D3" type="Marker2D" parent="EnemyContainer/EnemySpawnPoints"]
position = Vector2(-47, 1595)

[node name="Marker2D4" type="Marker2D" parent="EnemyContainer/EnemySpawnPoints"]
position = Vector2(966, 1595)

[node name="Marker2D7" type="Marker2D" parent="EnemyContainer/EnemySpawnPoints"]
position = Vector2(1, -650)

[node name="Marker2D8" type="Marker2D" parent="EnemyContainer/EnemySpawnPoints"]
position = Vector2(1014, -650)

[node name="Marker2D5" type="Marker2D" parent="EnemyContainer/EnemySpawnPoints"]
position = Vector2(1531, 970)

[node name="Marker2D6" type="Marker2D" parent="EnemyContainer/EnemySpawnPoints"]
position = Vector2(1531, -18)

[node name="GameTimer" type="Timer" parent="."]
wait_time = 300.0
one_shot = true
autostart = true

[node name="GameScreens" parent="." instance=ExtResource("6_pljid")]

[connection signal="leveled_up" from="Player" to="." method="_on_player_leveled_up"]
[connection signal="player_died" from="Player" to="." method="_on_player_player_died"]
[connection signal="timeout" from="EnemyContainer/EnemySpawner/SpawnCooldown" to="EnemyContainer/EnemySpawner" method="_on_spawn_cooldown_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
